# jvmplus

./: CMakeLists.txt  main.cpp
cpu/x86/vm/: bytes_x86.hpp
include/: common.h
include/gc/: gc_factory.h  mark_clean.h  mark_compact.h  mark_copy.h
include/gc/interface/: garbage_collect.h
include/jni/: Handle.h  Hashmap.h  JniTools.h  org_xyz_jvm_example_jni_Hashmap.h  org_xyz_jvm_example_jni_HelloWorld.h  org_xyz_jvm_example_jni_JavaThread.h  org_xyz_jvm_hotspot_src_share_vm_classfile_AppClassLoader.h  org_xyz_jvm_jdk_Threads.h  org_xyz_jvm_jdk_classes_JniEnv.h  org_xyz_jvm_jdk_classes_Threads.h  org_xyz_jvm_jdk_classes_sun_misc_AppClassLoader.h  org_xyz_jvm_jdk_classes_sun_misc_Unsafe.h
include/memory/: memory_cell.h  memory_chunk.h  memory_pool.h
os_cpu/linux_x86/vm/: bytes_linux_x86.inline.hpp
share/vm/adlc/: adlc.cpp  adlc.hpp  cHeapObj.cpp  cHeapObj.hpp
share/vm/classfile/: DescriptorStream.cpp  DescriptorStream.hpp  classFileParser.cpp  classFileParser.hpp  classFileStream.cpp  classFileStream.hpp  classLoader.cpp  classLoader.hpp  javaClasses.cpp  javaClasses.hpp  systemDictionary.cpp  systemDictionary.h
share/vm/gc_interface/: collectedHeap.cpp  collectedHeap.hpp
share/vm/interpreter/: baseBytecodeStream.cpp  baseBytecodeStream.hpp  bytecodeInterpreter.cpp  bytecodeInterpreter.hpp
share/vm/memory/: alloction.cpp  alloction.hpp  collectorPolicy.cpp  collectorPolicy.hpp  genCollectedHeap.cpp  genCollectedHeap.hpp  genCollectorPolicy.cpp  genCollectorPolicy.hpp  markSweepPolicy.cpp  markSweepPolicy.hpp  metaspace.cpp  metaspace.hpp  sharedHeap.cpp  sharedHeap.hpp  twoGenerationCollectorPolicy.cpp  twoGenerationCollectorPolicy.hpp  universe.cpp  universe.hpp
share/vm/oops/: DescriptorInfo.cpp  DescriptorInfo.hpp  InstanceMirrorKlass.cpp  InstanceMirrorKlass.hpp  attribute.hpp  bootstrapMethods.hpp  codeAttribute.hpp  constantPool.cpp  constantPool.hpp  constantValueAttribute.hpp  exceptionAttribute.h  field.h  field.hpp  innerClassAttribute.hpp  instanceKlass.cpp  instanceKlass.hpp  instanceOop.cpp  instanceOop.hpp  klass.cpp  klass.hpp  lineNumberTableAttribute.hpp  localVariableTableAttribute.hpp  metadata.cpp  metadata.hpp  method.cpp  method.hpp  oop.cpp  oop.hpp  oopsHierachy.cpp  oopsHierachy.hpp  sourceFileAttribute.hpp  stackMapTableAttribute.hpp  symbol.cpp  symbol.hpp
share/vm/prims/: JavaNativeInterface.cpp  JavaNativeInterface.hpp  jniHandles.cpp  jniHandles.h  jvm.h  unsafe.cpp
share/vm/runtime/: Thread.cpp  Thread.hpp  Threads.cpp  Threads.hpp  VFrame.cpp  VFrame.hpp  handles.cpp  handles.hpp  javaThread.cpp  javaThread.hpp  javaVFrame.cpp  javaVFrame.hpp  os.cpp  os.hpp  stackValue.cpp  stackValue.hpp  timer.cpp  timer.hpp
share/vm/utilities/: accessFlags.cpp  accessFlags.hpp  array.cpp  array.hpp  constantTag.cpp  constantTag.hpp  globalDefinitions.cpp  globalDefinitions.hpp  globalDefinitions_gcc.hpp  hashFun.hpp  hashMap.hpp  ostream.cpp  ostream.hpp  stack.cpp  stack.hpp  vector.cpp  vector.hpp
src/gc/: gc_factory.cpp  mark_clean.cpp  mark_compact.cpp  mark_copy.cpp
src/jni/: Handle.cpp  Hashmap.cpp  JniTools.cpp  org_xyz_jvm_example_jni_Hashmap.cpp  org_xyz_jvm_example_jni_HelloWorld.cpp  org_xyz_jvm_example_jni_JavaThread.cpp  org_xyz_jvm_hotspot_src_share_vm_classfile_AppClassLoader.cpp  org_xyz_jvm_jdk_Threads.cpp  org_xyz_jvm_jdk_classes_JniEnv.cpp  org_xyz_jvm_jdk_classes_Threads.cpp  org_xyz_jvm_jdk_classes_sun_misc_Unsafe.cpp  rg_xyz_jvm_jdk_classes_JniEnv.cpp
src/memory/: memory_cell.cpp  memory_chunk.cpp  memory_pool.cpp
